syntax = "proto3";

import "google/protobuf/timestamp.proto";

service DurableRpc {
    rpc ClientOperation (ClientRequest) returns (ClientResponse) {}
}

message ClientRequest {
    enum Type {
        Status = 0;
        Create = 1;
        SendEvent = 2;
        Terminate = 3;
        Rewind = 4;
        Purge = 5;
    }

    // Type of client request.
    Type type = 1;

    // properties
    map<string, RequestData> args = 2;
}

message ClientResponse {
    enum Result {
        Completed = 0;
        Failed = 1;
    }

    // 
    Result result = 0;

    //
    bytes error = 1;

    // TODO: not bytes
    ResponseData data = 2;
}

// Used to encapsulate request data which could be a variety of types
message RequestData {
    oneof data {
        string string = 1;
        bytes bytes = 2;
        bool bool = 3;
        sint64 int = 4;
        google.protobuf.Timestamp timestamp = 5;
        CollectionString collection_string = 6;
    }
}

// Used to encapsulate response data which could be a variety of types
message ResponseData {
    DurableOrchestrationStatus status = 0;
    StatusCollection status_collection = 1;
    string string = 3;
    sint64 int = 4;
}

// Used to encapsulate collection string
message CollectionString {
    repeated string string = 1;
}

message StatusCollection {
    repeated DurableOrchestrationStatus state = 0;

    string continuationToken = 1;
}

message DurableOrchestrationStatus {
    string name = 0;

    string id = 1;

    google.protobuf.Timestamp createdTime = 2;

    google.protobuf.Timestamp lastUpdatedTime = 3;

    string input = 4;

    string output = 5;

    repeated string runtime_status = 6;

    string customStatus = 7;

    repeated string history = 8;
}
